@@ -99,6 +99,11 @@ Trunk (unreleased changes)
  32. HADOOP-1311.  Fix a bug in BytesWritable#set() where start offset
      was ignored.  (Dhruba Borthakur via cutting)
 
+ 33. HADOOP-1450.  Move checksumming closer to user code, so that
+     checksums are created before data is stored in large buffers and
+     verified after data is read from large buffers, to better catch
+     memory errors.  (cutting)
+
 
 Release 0.13.0 - 2007-06-08
 
